
To SCons:

To documentation:
* Python API documented with Epydoc

To APIs:

To the Python package:

To programs:

* sfgrey4: generate movie of 3-D cube plots.
* sfungrad: phase unwrapping by least squares.
* sfhistogram now takes integer input as well
* sfhist2: 2-D float with integer or float inputs
* in-core large-file (>4Gb) support in sfwindow and sftransp

===Bug fixes===

In the reproducible documents collection:

In documentation:

In APIs:

In the Python package:

In programs:
* Fixed sfpen (via dovplot) bug
* Fixed sflosignoi bug
* Fixed sfdots axis-positioning bug
* Fixed sfmath crash when datapath was specified

In the build system:
* Fixed bug that resulted in BLAS/ATLAS-based programs to not install in Fedora
* Eliminated hardcoded paths that made it impossible to package m8r
* Workaround for SCons bug #1488 

==Release 1.2 (2011-07-14)==

===Additions and enhancements===

To the reproducible documents collection:

* swag/anisogath: Angle gathers in wave-equation imaging for
  transversely isotropic media (Alkhalifah and Fomel) 
* jsg/agath: Theory of 3-D angle gathers in wave-equation seismic
  imaging (Fomel)
* cwp/pept2011MicroearthquakeMonitoring: Micro-earthquake monitoring
  with sparsely-sampled data (Sava)
* jsg/vc3: Azimuthally anisotropic 3D velocity continuation (Burnett
  and Fomel)
* milano/taupvel: Velocity-independent tau-p moveout in a
  horizontally-layered VTI medium (Casasanta and Fomel)
* swag/thetaScan: Traveltime approximations for transversely isotropic
  media with an inhomogeneous background (Alkhalifah)
* cwp/geo2011WideAzimuthAngleDecomposition: Wide-azimuth angle gathers
  for wave-equation migration (Sava and Vlad)

To SCons:

* New directory structure:
  documentation under $RSFROOT/share/doc/madagascar
  other supplemental files under $RSFROOT/share/madagascar

To documentation:

* Info from VERSION.txt being printed in man pages for all programs
* Informative message at the end of successful global builds

To APIs:
