@@ -17,7 +17,8 @@ targets = bldutil.UserSconsTargets()
 
 # C mains
 targets.c = '''
-quantile leftsize filedims fileflush create gettype lmo multicheck hist2 
+quantile leftsize filedims fileflush create gettype lmo multicheck hist2
+sparsify
 '''
 
 # F90 mains
